--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Resume - John Doe</title>
+<title>INTRODUCTION</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <style>
     .hidden {
@@ -15,31 +15,32 @@
 <body>
 
 <div class="container mt-4">
+    <h2 style="color: red; font-weight: bolder;">This is just an example page.</h2>
     <div class="row">
         <div class="col-md-6 mx-auto">
             <div class="card">
                 <div class="card-header bg-primary text-white" id="personalInfoHeading" style="cursor: pointer;">
-                    <h2 class="text-center">Personal Information</h2>
+                    <h2 class="text-center">个人介绍</h2>
                 </div>
                 <div class="card-body hidden" id="personalInfoBody">
                     <div class="d-flex justify-content-center mb-3">
                         <img src="https://avatars.githubusercontent.com/u/166218197?v=4" class="img-fluid rounded-circle" alt="Avatar" style="max-width: 150px;">
                     </div>
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <p class="list-group-item">John Doe</p>
+                        <label for="name">姓名</label>
+                        <p class="list-group-item">GWSDKAgent</p>
                     </div>
                     <div class="form-group">
-                        <label for="email">Email</label>
-                        <p class="list-group-item">john.doe@example.com</p>
+                        <label for="email">邮箱</label>
+                        <p class="list-group-item">&nbsp;</p>
                     </div>
                     <div class="form-group">
-                        <label for="phone">Phone</label>
-                        <p class="list-group-item">123-456-7890</p>
+                        <label for="phone">手机号</label>
+                        <p class="list-group-item">+8613838383838</p>
                     </div>
                     <div class="form-group">
-                        <label for="address">Address</label>
-                        <p class="list-group-item">123 Main St, City, Country</p>
+                        <label for="address">地址</label>
+                        <p class="list-group-item">中国香港尖沙咀</p>
                     </div>
                 </div>
             </div>
@@ -47,24 +48,24 @@
         <div class="col-md-6 mx-auto">
             <div class="card">
                 <div class="card-header bg-primary text-white" id="resumeHeading" style="cursor: pointer;">
-                    <h2 class="text-center">Resume</h2>
+                    <h2 class="text-center">简历</h2>
                 </div>
                 <div class="card-body hidden" id="resumeBody">
-                    <h4 class="card-title">Summary</h4>
-                    <p class="card-text">A passionate web developer with 5 years of experience in frontend development.</p>
-                    <h4 class="card-title">Experience</h4>
+                    <h4 class="card-title">介绍</h4>
+                    <p class="card-text">两年的前后端平台软件开发经验</p>
+
+                    <h4 class="card-title">学历</h4>
                     <ul class="list-group">
-                        <li class="list-group-item">Company A - Frontend Developer (2017-2020)</li>
-                        <li class="list-group-item">Company B - Web Designer (2015-2017)</li>
+                        <li class="list-group-item">XX大学计算机科学与技术专业本科生 (2021-2025)</li>
+                        <li class="list-group-item">XXXX大学计算机专硕研究生 (2025-2028)</li>
                     </ul>
-                    <h4 class="card-title mt-3">Skills</h4>
+
+                    <h4 class="card-title mt-3">经验</h4>
                     <ul class="list-group">
-                        <li class="list-group-item">HTML/CSS</li>
-                        <li class="list-group-item">JavaScript</li>
-                        <li class="list-group-item">Bootstrap</li>
+                        <li class="list-group-item">熟悉Python、Java、C++、C、Rust、Ruby、C#、JavaScript、TypeScript</li>
+                        <li class="list-group-item">知道基础的HTML和CSS，会用ReactJS、Vue、Bootstrap、Jekyll。</li>
+                        <li class="list-group-item">熟悉MySQL、PostgreSQL、MongoDB、Hadoop、HBase、Redis、Neo4j、Docker、Springboot、Flask、Django、Gradle、Maven、Qt、CUDA、知道Nodejs、OpenAPI、Restful API，会用VMWare、VirtualBox、PowerShell、Git、SVN、Anaconda，知道Debian、Ubuntu、CentOS、Archlinux等系统的常用命令</li>
                     </ul>
-                    <h4 class="card-title mt-3">Education</h4>
-                    <p class="card-text">Bachelor's Degree in Computer Science, University of ABC (2015)</p>
                 </div>
             </div>
         </div>
